--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "",
   "dependencies": {
     "discord.js": "13.3",
-    "node": "^16.10.0"
+    "node": "^16.10.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2"
   }
